# ado-search

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: check-version.yml  publish.yml
docs/superpowers/plans/: 2026-04-10-jsonl-data-layer.md
docs/superpowers/specs/: 2026-04-10-jsonl-data-layer-design.md
src/ado_search/: __init__.py  attachments.py  auth.py  children.py  cli.py  config.py  db.py  grep.py  jsonl.py  markdown.py  runner.py  search.py  sync_common.py  sync_odata.py  sync_wiki.py  sync_workitems.py  upload_attachment.py  write_workitems.py
tests/: conftest.py  test_attachments.py  test_auth.py  test_children.py  test_cli.py  test_config.py  test_db.py  test_e2e.py  test_grep.py  test_jsonl.py  test_markdown.py  test_runner.py  test_search.py  test_state_history.py  test_sync_common.py  test_sync_odata.py  test_sync_wiki.py  test_sync_workitems.py  test_write_workitems.py
tests/fixtures/: odata_workitems_page1.json  wiki_page_content.json  wiki_page_list.json  wiql_query_result.json  work_item_12345.json  work_item_12346.json  work_item_with_attachments.json
